tests/errors/invoke-undefined-port.expect
---CODE---
1
---STDERR---
Error: tests/errors/invoke-undefined-port.futil
15 |    invoke f(b = 32'd10)();
   |    ^^^^^^^^^^^^^^^^^^^^^^^ Malformed Structure: `f` does not have port named: `b`
